--- a/ReactEcoApp/package.json
+++ b/ReactEcoApp/package.json
@@ -14,7 +14,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-spinners": "^0.14.1",
     "sass": "^1.79.5",
+    "sweetalert2": "^11.14.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
